# algo-trade

./: .gitignore  AlgoTrade.xlsx  CLAUDE.md  Live Trade Data.xlsx  README.md  Websocket.xlsx  auth.py  dashboardPage.md  dhan_algo.py  dhan_get_instruments.py  dhan_login.py  dhan_nifty_breakout.py  dhan_trade.py  dhan_watchlist.py  dhanhq_wrapper.py  get_instruments.py  get_token.py  kite_client.py  live_nifty.py  main.py  market_open.py  pyproject.toml  send_email.py  telegram.py  test_code.ipynb
.claude/: settings.json  settings.local.json
.github/workflows/: algo_trade.yml
.superpowers/brainstorm/12136-1776541779/state/: server-info
dhan_services/: dhan_get_instruments.py  dhan_login.py  dhan_old_code.py  dhan_watchlist.py  excel_reporter.py  execution.py  market_opennings.py  orderbook_template.py  send_email.py  telegram.py
dhan_websockets/: .env_ws  .telegram_sent.json  dhan_options.py  dhan_ws.py  live_feed.py  main.py  main_algo.py  nifty_option_chain.py  nifty_option_chain_app.py  pyproject.toml
docs/superpowers/plans/: 2026-04-14-testing.md  2026-04-15-dashboard-redesign.md  2026-04-15-swing-trades.md  2026-04-19-admin-settings.md  2026-04-19-admin-user-management.md
docs/superpowers/specs/: 2026-04-14-testing-design.md  2026-04-15-dashboard-redesign.md  2026-04-15-swing-trades-design.md  2026-04-19-admin-settings-design.md  2026-04-19-admin-user-management-design.md
nicegui_app/: _test_email.py  algo.db  algo_strategies.py  auth.py  brokerage.py  charts.py  config.py  data.py  db.py  economic_calendar.py  email_report.py  global_feed.py  main.py  models.py  pnl.py  pyproject.toml  sidebar.py  state.py  strategy_registry.py  trading_engine.py  tv_charts.py  ui_components.py  ws_feed.py
nicegui_app/pages/: __init__.py  abcd_only.py  admin.py  algo.py  backtest_pnl_tab.py  channel_breakout_only.py  channel_down_only.py  dashboard.py  double_bottom_only.py  double_top_only.py  double_top_standard_only.py  ema10_only.py  global_markets.py  homepage.py  login.py  market_closed.py  market_news.py  markets.py  option_chain.py  pnl_tab.py  rsi_only.py  sma50_only.py  swing_trades.py  top_stocks.py
nicegui_app/routes/: auth_routes.py
nicegui_app/static/: terminal_theme.css
nicegui_app/tests/: conftest.py  test_algo_strategies.py  test_charts.py  test_config.py  test_dashboard_prices.py  test_data.py  test_economic_calendar.py  test_global_feed.py  test_state.py  test_ws_feed.py
strategies/: ema_cross_overs.py  indicators.py
zerodha_kite/: get_instruments.py  get_token.py  kite_client.py  live_nifty.py  main.py  market_open.py  test_code.ipynb
