[project]
name = "algotrading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dhan-tradehull==3.0.2",
    "dhanhq==2.0.2",
    "ipykernel>=6.29.5",
    "kiteconnect>=5.0.1",
    "matplotlib>=3.10.3",
    "mibian>=0.1.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.15.1",
    "scipy>=1.15.3",
    "ta-lib>=0.6.7",
    "xlwings>=0.33.16",
]

[tool.uv.workspace]
members = [
    "dhan_v2",
]
