[project]
name = "algotrading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dhan-tradehull==3.0.2",
    "dhanhq==2.0.2",
    "ipykernel>=6.29.5",
    "kiteconnect>=5.0.1",
    "matplotlib>=3.10.3",
    "mibian>=0.1.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
    "ta-lib>=0.6.7",
    "xlwings>=0.33.16",
]

[tool.uv.workspace]
members = [
    "dhan_v2",
    "dhan_websockets",
]

[tool.ruff]
# Maximum line length (like Black)
line-length = 100

# Target Python version
target-version = "py311"

# Exclude common folders
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.ruff.lint]
# Enable rule families
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (if using formatter)
    "B008",  # function calls in argument defaults
    "N806",  # variable naming in functions
]

# Auto-fix rules where possible
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# isort-style config
known-first-party = ["app", "tests"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py
"__init__.py" = ["F401"]

# Ignore asserts in tests
"tests/*" = ["S101"]
