[project]
name = "option-chain-nicegui"
version = "0.1.0"
description = "NIFTY & BANKNIFTY Option Chain with Algo Trading — NiceGUI"
requires-python = ">=3.10"
dependencies = [
    "nicegui>=2.15.0",
    "dhanhq>=2.0.2",
    "pandas>=2.0.0",
    "plotly>=6.6.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "ta-lib>=0.6.8",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]
